<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_home"
        android:icon="@drawable/homepng"
        android:title="@string/menu_nam"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/action_add"
        android:icon="@drawable/profile"
        android:title="@string/menu_title"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/action_addQ"
        android:icon="@drawable/query"
        android:title="@string/menu_title"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_signout"
        android:title="@string/signout"
        app:showAsAction="never"
        />







</menu>