<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="5dp"
    app:cardCornerRadius="8dp"

    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/centreGcolor"
        android:alpha="0.8"
        android:elevation="10dp"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:layout_height="wrap_content">
        <TextView
            android:text="Gina"
            android:id="@+id/journal_row_username"
            android:padding="3dp"
            android:textSize="17sp"
            android:layout_weight="1"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:id="@+id/journal_row_shareButton"
            android:src="@android:drawable/ic_menu_share"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/journal_image_list"
            android:layout_width="wrap_content"
            android:layout_height="285dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="TODO"
            android:cropToPadding="true"
            android:scaleType="fitXY"
            android:src="@drawable/image_three" />

        <TextView
            android:id="@+id/journal_title_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"


            android:padding="10dp"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/journal_thought_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:text="@string/thought"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/journal_timestamp_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:text="@string/date_created"
            android:textStyle="italic" />

    </LinearLayout>


</androidx.cardview.widget.CardView>